gk/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-manager
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-manager
  template:
    metadata:
      name: wallet-manager
      labels:
        app: wallet-manager
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-manager-config
            defaultMode: 420
      containers:
        - name: wallet-manager
          image: gamekeeperz/test-wallet-repo:usermanager
          ports:
            - containerPort: 5010
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      
      
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-m-main
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-m-main
  template:
    metadata:
      name: wallet-m-main
      labels:
        app: wallet-m-main
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-m-main-config
            defaultMode: 420
      containers:
        - name: wallet-m-google
          image: gamekeeperz/test-wallet-repo:wallet-m-main-test
          ports:
            - containerPort: 5020
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/m/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-m-applepass
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-m-applepass
  template:
    metadata:
      name: wallet-m-applepass
      labels:
        app: wallet-m-applepass
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-m-apple-config
            defaultMode: 420
      containers:
        - name: wallet-m-applepass
          image: gamekeeperz/test-wallet-repo:wallet-m-applepass-test
          ports:
            - containerPort: 5030
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-m-google
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-m-google
  template:
    metadata:
      name: wallet-m-google
      labels:
        app: wallet-m-google
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-m-google-config
            defaultMode: 420
      containers:
        - name: wallet-m-google
          image: gamekeeperz/test-wallet-repo:wallet-m-googlepay-test
          ports:
            - containerPort: 5040
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30


---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-client
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-client
  template:
    metadata:
      name: wallet-client
      labels:
        app: wallet-client
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-client-config
            defaultMode: 420
      containers:
        - name: wallet-client
          image: gamekeeperz/test-wallet-repo:wallet-clientsave-test
          ports:
            - containerPort: 5050
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30


---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-applepass
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-applepass
  template:
    metadata:
      name: wallet-applepass
      labels:
        app: wallet-applepass
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-apple-config
            defaultMode: 420
      containers:
        - name: wallet-applepass
          image: gamekeeperz/test-wallet-repo:wallet-applepass-test
          ports:
            - containerPort: 5060
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wallet-googlepay
  namespace: wallet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-googlepay
  template:
    metadata:
      name: wallet-googlepay
      labels:
        app: wallet-googlepay
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: wallet-google-config
            defaultMode: 420
      containers:
        - name: wallet-googlepay
          image: gamekeeperz/test-wallet-repo:wallet-googlepay-test
          ports:
            - containerPort: 5070
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
