gk/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-manager
  namespace: serv1
spec:
  selector:
    app: wallet-manager
  ports:
    - name: 8001-5010
      protocol: TCP
      port: 8001
      targetPort: 5010
      
      
---


apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-m-main
  namespace: serv1
spec:
  selector:
    app: wallet-m-main
  ports:
    - name: 8002-5020
      protocol: TCP
      port: 8002
      targetPort: 5020
      
---

apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-m-applepass
  namespace: serv1
spec:
  selector:
    app: wallet-m-applepass
  ports:
    - name: 8003-5030
      protocol: TCP
      port: 8003
      targetPort: 5030
      
---

apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-m-google
  namespace: serv1
spec:
  selector:
    app: wallet-m-google
  ports:
    - name: 8004-5040
      protocol: TCP
      port: 8004
      targetPort: 5040


---

apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-client
  namespace: serv1
spec:
  selector:
    app: wallet-client
  ports:
    - name: 8005-5050
      protocol: TCP
      port: 8005
      targetPort: 5050

---

apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-applepass
  namespace: serv1
spec:
  selector:
    app: wallet-applepass
  ports:
    - name: 8006-5060
      protocol: TCP
      port: 8006
      targetPort: 5060

---

apiVersion: v1
kind: Service
metadata:
  labels:
    visualize: "true"
  name: wallet-googlepay
  namespace: serv1
spec:
  selector:
    app: wallet-googlepay
  ports:
    - name: 8007-5070
      protocol: TCP
      port: 8007
      targetPort: 5070
